--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.10.15",
     "axios": "^1.10.0",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^17.0.0",
     "gsap": "^3.13.0",
     "jsonwebtoken": "^9.0.2",
