--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@splinetool/runtime": "^1.10.15",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "dotenv": "^17.0.0",
     "gsap": "^3.13.0",
     "jsonwebtoken": "^9.0.2",
